--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=REMODEL
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -37,3 +37,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ADMIN_PRIMARY_NAME="David Stahl"
+ADMIN_PRIMARY_EMAIL="stahl.182@osu.edu"
+ADMIN_ROOT_PATH=""
+
+RESIDENT_ROOT_PATH=""
+
+ATTENDING_ROOT_PATH=""
